<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mcnallydev.apps.authenticator.ui.SetupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/default_padding">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/imageView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginBottom="@dimen/default_margin_height"
            android:layout_marginTop="@dimen/default_margin_height"
            android:contentDescription="@string/content_description"
            app:srcCompat="@drawable/ic_authenticator_black_80dp" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin_height"
            android:layout_marginTop="@dimen/default_margin_height"
            android:text="@string/activity_setup_title"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin_height"
            android:layout_marginTop="@dimen/default_margin_height"
            android:text="@string/activity_setup_description"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/item_barcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/default_padding"
        android:paddingBottom="@dimen/default_padding"
        android:paddingTop="@dimen/default_padding">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/content_description"
            app:srcCompat="@drawable/ic_camera_alt_black_30dp" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/item_margin_start_end"
            android:layout_marginRight="@dimen/item_margin_start_end"
            android:text="@string/activity_setup_item_barcode"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/secondaryText" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/item_generate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/default_padding"
        android:paddingBottom="@dimen/default_padding"
        android:paddingTop="@dimen/default_padding">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/content_description"
            app:srcCompat="@drawable/ic_keyboard_black_30dp" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/item_margin_start_end"
            android:layout_marginRight="@dimen/item_margin_start_end"
            android:text="@string/activity_setup_item_new"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/secondaryText" />

    </LinearLayout>

</LinearLayout>
